--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -695,14 +695,7 @@
    "source": [
     "\n",
     "logger.info(\"======= LOADING YOUR DATAFRAME (df) =======\")\n",
-    "# Ensure your df has columns: \n",
-    "#   id, authors, filtered_references, n_citation, venue_numeric, abstract_embeddings\n",
-    "# If references do not match 'id', adjacency will be empty => leads to NaNs.\n",
     "\n",
-    "# 1) Suppose 'df' is already in your namespace; otherwise, load or define it.\n",
-    "# df = pd.read_csv(\"my_data.csv\")  # Example\n",
-    "\n",
-    "# 2) Build the graph\n",
     "graph_builder = PaperGraph(df)\n",
     "data = graph_builder.get_graph()\n",
     "\n",
@@ -715,7 +708,7 @@
     "logger.info(\"Visualizing a small subgraph before splitting edges.\")\n",
     "visualize_subgraph(data, num_papers=3)\n",
     "\n",
-    "# 3) Split edges\n",
+    "# Split edges\n",
     "logger.info(\"Splitting edges into train/val/test.\")\n",
     "full_edge_index = data['paper','cites','paper'].edge_index\n",
     "train_edges, val_edges, test_edges = split_edges(full_edge_index, val_ratio=0.2, test_ratio=0.2)\n",
@@ -723,13 +716,13 @@
     "logger.info(\"Setting adjacency to train-only edges.\")\n",
     "data['paper','cites','paper'].edge_index = train_edges\n",
     "\n",
-    "# 4) Negative sampling\n",
+    "# Negative sampling\n",
     "logger.info(\"Creating train, val, test edge_label_index/label with negative sampling.\")\n",
     "train_edge_index, train_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), train_edges)\n",
     "val_edge_index, val_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), val_edges)\n",
     "test_edge_index, test_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), test_edges)\n",
     "\n",
-    "# 5) Train\n",
+    "# Train\n",
     "logger.info(\"Starting training.\")\n",
     "model, test_pred = run_link_prediction_training(\n",
     "    data,\n",
@@ -740,7 +733,7 @@
     "    epochs=10, lr=0.01\n",
     ")\n",
     "\n",
-    "# 6) Visualize results\n",
+    "# Visualize results\n",
     "logger.info(\"Visualizing final paper embeddings (PCA).\")\n",
     "visualize_embeddings(model, data)\n",
     "\n",
@@ -748,7 +741,7 @@
     "    logger.info(\"Plotting confusion matrix on test set.\")\n",
     "    plot_confusion_matrix(test_edge_label, test_pred)\n",
     "\n",
-    "# 7) Demonstrate citation recommendation\n",
+    "# Demonstrate citation recommendation\n",
     "if data['paper'].num_nodes > 1:\n",
     "    rec_papers, rec_scores = recommend_citations(model, data, paper_idx=0, k=3)\n",
     "    logger.info(f\"Recommended citing papers for paper 0: {rec_papers} with scores {rec_scores}.\")\n",
