Consolidated work on literature review

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -192,6 +192,218 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-02-12 20:55:34,348 - INFO - Performing PCA.\n",
+      "2025-02-12 20:55:35,105 - INFO - Computing 2D PCA with shape (100000, 384)\n",
+      "2025-02-12 20:55:35,454 - INFO - 2D PCA done. Computing 3D PCA.\n",
+      "2025-02-12 20:55:36,002 - INFO - 3D PCA done.\n",
+      "2025-02-12 20:55:36,015 - INFO - Running Dash app.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x339e476b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-02-12 20:55:36,350 - INFO - Updating plots.\n",
+      "2025-02-12 20:55:49,634 - INFO - Updating plots.\n",
+      "2025-02-12 20:56:11,481 - INFO - Download button clicked.\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nodename nor servname provided, or not known\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-02-12 20:56:43,813 - INFO - Updating plots.\n",
+      "2025-02-12 20:56:47,847 - INFO - Updating plots.\n",
+      "2025-02-12 20:56:49,415 - INFO - Updating plots.\n",
+      "2025-02-12 21:03:55,980 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:01,221 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:04,002 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:06,843 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:08,152 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:10,194 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:12,620 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:16,339 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:18,908 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:21,151 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,003 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,203 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,395 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,581 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,753 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:24,880 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:26,514 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:26,812 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:30,387 - INFO - Updating plots.\n",
+      "2025-02-12 21:04:32,749 - INFO - Updating plots.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import logging\n",
+    "import sys\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.decomposition import PCA\n",
+    "import dash\n",
+    "from dash import dcc, html, Input, Output\n",
+    "import dash_bootstrap_components as dbc\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('abstract_embeddings.csv')\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "df = df.sort_values(by='year', ascending=True).head(100000)\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    stream=sys.stdout,\n",
+    "    format=\"%(asctime)s - %(levelname)s - %(message)s\"\n",
+    ")\n",
+    "\n",
+    "class PCAVisualization:\n",
+    "    def __init__(self, df, title=\"PCA Embedding Visualization\"):\n",
+    "        if df[\"abstract_embeddings\"].apply(lambda x: isinstance(x, str)).any():\n",
+    "            logging.info(\"Converting string embeddings to list.\")\n",
+    "            df[\"abstract_embeddings\"] = [\n",
+    "                json.loads(x) if isinstance(x, str) else x\n",
+    "                for x in tqdm(df[\"abstract_embeddings\"])\n",
+    "            ]\n",
+    "        logging.info(\"Performing PCA.\")\n",
+    "        self.df = self._perform_pca(df)\n",
+    "        self.title = title\n",
+    "        self.app = dash.Dash(__name__, external_stylesheets=[dbc.themes.LUX])\n",
+    "        self._build_layout()\n",
+    "    \n",
+    "    def _perform_pca(self, df):\n",
+    "        embeddings = np.array(df[\"abstract_embeddings\"].tolist())\n",
+    "        logging.info(\"Computing 2D PCA with shape %s\", embeddings.shape)\n",
+    "        pca_2d = PCA(n_components=2).fit_transform(embeddings)\n",
+    "        logging.info(\"2D PCA done. Computing 3D PCA.\")\n",
+    "        pca_3d = PCA(n_components=3).fit_transform(embeddings)\n",
+    "        logging.info(\"3D PCA done.\")\n",
+    "        df[\"pca_x_2d\"], df[\"pca_y_2d\"] = pca_2d[:, 0], pca_2d[:, 1]\n",
+    "        df[\"pca_x_3d\"], df[\"pca_y_3d\"], df[\"pca_z_3d\"] = pca_3d[:, 0], pca_3d[:, 1], pca_3d[:, 2]\n",
+    "        return df\n",
+    "    \n",
+    "    def _build_layout(self):\n",
+    "        self.app.layout = dbc.Container([\n",
+    "            html.H1(self.title, className=\"text-center mt-4 mb-4\"),\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"venue-selector\",\n",
+    "                options=[{\"label\": v, \"value\": v} for v in sorted(self.df[\"venue_numeric\"].unique())],\n",
+    "                multi=True,\n",
+    "                placeholder=\"Select venues to display\",\n",
+    "                className=\"mb-4\"\n",
+    "            ),\n",
+    "            dbc.Row([\n",
+    "                dbc.Col(dcc.Graph(id=\"pca-2d-plot\"), width=6),\n",
+    "                dbc.Col(dcc.Graph(id=\"pca-3d-plot\"), width=6)\n",
+    "            ]),\n",
+    "            dbc.Row([\n",
+    "                dbc.Col(dcc.Graph(id=\"heatmap-plot\"), width=12)\n",
+    "            ]),\n",
+    "            dbc.Button(\"Download HTML Report\", id=\"download-button\", className=\"mt-4 mb-4\", color=\"primary\"),\n",
+    "            dcc.Download(id=\"download-html\")\n",
+    "        ], fluid=True)\n",
+    "        \n",
+    "        @self.app.callback(\n",
+    "            [\n",
+    "                Output(\"pca-2d-plot\", \"figure\"),\n",
+    "                Output(\"pca-3d-plot\", \"figure\"),\n",
+    "                Output(\"heatmap-plot\", \"figure\")\n",
+    "            ],\n",
+    "            [Input(\"venue-selector\", \"value\")]\n",
+    "        )\n",
+    "        def update_plots(selected_venues):\n",
+    "            logging.info(\"Updating plots.\")\n",
+    "            filtered_df = self.df[self.df[\"venue_numeric\"].isin(selected_venues)] if selected_venues else self.df\n",
+    "            fig_2d = px.scatter(\n",
+    "                filtered_df, x=\"pca_x_2d\", y=\"pca_y_2d\", color=\"venue_numeric\",\n",
+    "                title=\"PCA 2D Visualization\", hover_data=[\"venue_numeric\"], template=\"plotly_white\"\n",
+    "            )\n",
+    "            fig_3d = px.scatter_3d(\n",
+    "                filtered_df, x=\"pca_x_3d\", y=\"pca_y_3d\", z=\"pca_z_3d\", color=\"venue_numeric\",\n",
+    "                title=\"PCA 3D Visualization\", hover_data=[\"venue_numeric\"], template=\"plotly_white\"\n",
+    "            )\n",
+    "            fig_heatmap = go.Figure(\n",
+    "                data=go.Histogram2dContour(\n",
+    "                    x=filtered_df[\"pca_x_2d\"], y=filtered_df[\"pca_y_2d\"],\n",
+    "                    colorscale=\"Viridis\", contours=dict(showlabels=True)\n",
+    "                )\n",
+    "            )\n",
+    "            fig_heatmap.update_layout(\n",
+    "                title=\"PCA Heatmap of Abstract Embeddings\",\n",
+    "                xaxis_title=\"PCA X\",\n",
+    "                yaxis_title=\"PCA Y\",\n",
+    "                template=\"plotly_white\"\n",
+    "            )\n",
+    "            return fig_2d, fig_3d, fig_heatmap\n",
+    "        \n",
+    "        @self.app.callback(\n",
+    "            Output(\"download-html\", \"data\"),\n",
+    "            [Input(\"download-button\", \"n_clicks\")],\n",
+    "            prevent_initial_call=True\n",
+    "        )\n",
+    "        def download_html(n_clicks):\n",
+    "            logging.info(\"Download button clicked.\")\n",
+    "            file_path = \"pca_visualization.html\"\n",
+    "            self.app.server.run(\"dash_app\", port=8050, debug=False)\n",
+    "            return dcc.send_file(file_path)\n",
+    "    \n",
+    "    def run(self):\n",
+    "        logging.info(\"Running Dash app.\")\n",
+    "        self.app.run_server(debug=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "visualization = PCAVisualization(df)\n",
+    "visualization.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -695,7 +907,14 @@
    "source": [
     "\n",
     "logger.info(\"======= LOADING YOUR DATAFRAME (df) =======\")\n",
+    "# Ensure your df has columns: \n",
+    "#   id, authors, filtered_references, n_citation, venue_numeric, abstract_embeddings\n",
+    "# If references do not match 'id', adjacency will be empty => leads to NaNs.\n",
     "\n",
+    "# 1) Suppose 'df' is already in your namespace; otherwise, load or define it.\n",
+    "# df = pd.read_csv(\"my_data.csv\")  # Example\n",
+    "\n",
+    "# 2) Build the graph\n",
     "graph_builder = PaperGraph(df)\n",
     "data = graph_builder.get_graph()\n",
     "\n",
@@ -708,7 +927,7 @@
     "logger.info(\"Visualizing a small subgraph before splitting edges.\")\n",
     "visualize_subgraph(data, num_papers=3)\n",
     "\n",
-    "# Split edges\n",
+    "# 3) Split edges\n",
     "logger.info(\"Splitting edges into train/val/test.\")\n",
     "full_edge_index = data['paper','cites','paper'].edge_index\n",
     "train_edges, val_edges, test_edges = split_edges(full_edge_index, val_ratio=0.2, test_ratio=0.2)\n",
@@ -716,13 +935,13 @@
     "logger.info(\"Setting adjacency to train-only edges.\")\n",
     "data['paper','cites','paper'].edge_index = train_edges\n",
     "\n",
-    "# Negative sampling\n",
+    "# 4) Negative sampling\n",
     "logger.info(\"Creating train, val, test edge_label_index/label with negative sampling.\")\n",
     "train_edge_index, train_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), train_edges)\n",
     "val_edge_index, val_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), val_edges)\n",
     "test_edge_index, test_edge_label = get_edge_label_index_and_label(data, ('paper','cites','paper'), test_edges)\n",
     "\n",
-    "# Train\n",
+    "# 5) Train\n",
     "logger.info(\"Starting training.\")\n",
     "model, test_pred = run_link_prediction_training(\n",
     "    data,\n",
@@ -733,7 +952,7 @@
     "    epochs=10, lr=0.01\n",
     ")\n",
     "\n",
-    "# Visualize results\n",
+    "# 6) Visualize results\n",
     "logger.info(\"Visualizing final paper embeddings (PCA).\")\n",
     "visualize_embeddings(model, data)\n",
     "\n",
@@ -741,7 +960,7 @@
     "    logger.info(\"Plotting confusion matrix on test set.\")\n",
     "    plot_confusion_matrix(test_edge_label, test_pred)\n",
     "\n",
-    "# Demonstrate citation recommendation\n",
+    "# 7) Demonstrate citation recommendation\n",
     "if data['paper'].num_nodes > 1:\n",
     "    rec_papers, rec_scores = recommend_citations(model, data, paper_idx=0, k=3)\n",
     "    logger.info(f\"Recommended citing papers for paper 0: {rec_papers} with scores {rec_scores}.\")\n",
